# blueprints.md

./: .gitignore  BLUEPRINTS_SPEC.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/agents/: clean-python-architect.md  python-expert-developer.md
.github/workflows/: publish.yml  release.yml
examples/ecommerce/: Makefile  README.md  app.md  app.py  main.md  main.py  requirements-dev.txt  requirements.txt
examples/ecommerce/api/: auth.md  auth.py  cart.md  cart.py  inventory.md  inventory.py  jobs.md  jobs.py  orders.md  orders.py  payments.md  payments.py  products.md  products.py  reviews.md  reviews.py
examples/ecommerce/core/: database.md  database.py
examples/ecommerce/jobs/: tasks.md  tasks.py  worker.md  worker.py
examples/ecommerce/models/: cart.md  category.md  inventory.md  job.md  order.md  order_item.md  payment.md  product.md  review.md  user.md
examples/ecommerce/services/: auth.md  auth.py  order.md  order.py  payment.md  payment.py
examples/task_api/: Makefile  app.md  app.py  main.md  main.py  requirements-dev.txt  requirements.md  requirements.txt
examples/task_api/api/: tasks.md  tasks.py  users.md  users.py
examples/task_api/core/: auth.md  auth.py  database.md  database.py
examples/task_api/models/: task.md  task.py  user.md  user.py
src/blueprints/: __init__.py  adaptive_generation_strategist.py  adaptive_prompt_generator.py  agentic_resolver.py  claude_parser.py  code_generator.py  config.py  constants.py  dependency_manager.py  factory.py  generator.py  intelligent_context_curator.py  iterative_quality_improver.py  logging_config.py  natural_generator.py  natural_parser.py  parser.py  project_generator.py  prompt_builder.py  resolver.py  utils.py  verifier.py
src/blueprints/cli/: __init__.py  main.py
tests/: __init__.py  test_cli.py
